bazel_dep(name = "rules_go", version = "0.44.2")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.6")
go_sdk.nogo(nogo = "//:my_nogo")


go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

go_deps.gazelle_override(
	directives = [
		"gazelle:proto disable_global",
	],
	path = "github.com/prometheus/prometheus",
)

go_deps.gazelle_override(
	directives = [
		"gazelle:proto disable_global",
	],
	path = "github.com/prometheus/alertmanager",
)

use_repo(
	go_deps,
	"com_github_prometheus_alertmanager",
	"com_github_prometheus_prometheus",
)
